added google sign in, apple sign in reserved

--- a/pages/login.html
+++ b/pages/login.html
@@ -37,7 +37,7 @@
             Don't have an account? <a href="./signup.html"><span class="sign-up-link">Sign up</span></a>
         </p>
         <div class="buttons-container">
-            <button onclick="window.location.href='#'" type="button" class="apple-login-button">
+            <!-- <button onclick="window.location.href='#'" type="button" class="apple-login-button">  -- Disabled for now, as Apple login requires a paid developer account 
                 <svg stroke="currentColor" fill="currentColor" stroke-width="0" class="apple-icon"
                     viewBox="0 0 1024 1024" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -45,7 +45,7 @@
                     </path>
                 </svg>
                 <span>Log in with Apple</span>
-            </button>
+            </button> -->
             <button onclick="window.location.href='#'" type="button" class="google-login-button">
                 <svg stroke="currentColor" fill="currentColor" stroke-width="0" version="1.1" x="0px" y="0px"
                     class="google-icon" viewBox="0 0 48 48" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
