--- a/pages/signup.html
+++ b/pages/signup.html
@@ -38,7 +38,7 @@
             Already have an account? <a href="./login.html"><span class="sign-up-link">Login</span></a>
         </p>
         <div class="buttons-container">
-            <button onclick="window.location.href='#'" type="button" class="apple-signup-button">
+            <!-- <button onclick="window.location.href='#'" type="button" class="apple-signup-button"> -- Requires a paid developer account to enable Apple login
                 <svg stroke="currentColor" fill="currentColor" stroke-width="0" class="apple-icon"
                     viewBox="0 0 1024 1024" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -46,7 +46,7 @@
                     </path>
                 </svg>
                 <span>Sign Up with Apple</span>
-            </button>
+            </button> -->
             <button onclick="window.location.href='#'" type="button" class="google-signup-button">
                 <svg stroke="currentColor" fill="currentColor" stroke-width="0" version="1.1" x="0px" y="0px"
                     class="google-icon" viewBox="0 0 48 48" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
